@@ -6,8 +6,7 @@
     <parent>
         <groupId>gr2338</groupId>
         <artifactId>vendmachtrack</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath>..</relativePath>
+        <version>1.0</version>
     </parent>
 
     <properties>
@@ -19,7 +18,13 @@
         <dependency>
             <groupId>gr2338</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>gr2338</groupId>
+            <artifactId>jsonio</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- javafx -->
@@ -32,12 +37,6 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>17.0.8</version>
-        </dependency>
-        <dependency>
-            <groupId>gr2338</groupId>
-            <artifactId>jsonio</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -74,7 +73,12 @@
             <version>4.0.16-alpha</version> <!-- use the latest version -->
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>3.2.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -83,18 +87,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>@{argLine} --add-opens vendmachtrack.ui/ui=ALL-UNNAMED --add-exports
-                        javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -106,23 +98,6 @@
                 <configuration>
                     <!-- syntax: module-name/full-app-class-name -->
                     <mainClass>vendmachtrack.ui/vendmachtrack.ui.App</mainClass>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
-                    <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
                 </configuration>
             </plugin>
 
